manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wechat-article-editor
  labels:
    app: wechat-article-editor
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: wechat-article-editor
